fixing contrast issues

--- a/Helium/gtk-4.0/_tauos.scss
+++ b/Helium/gtk-4.0/_tauos.scss
@@ -95,7 +95,7 @@ $colors: (
 
   .fill-button.#{$name} {
     background-color: $color;
-    color: gtkmix($color, $accent_fg_color, 50%);
+    color: gtkmix($accent_fg_color, $color, 4%);
 
     &:hover {
       background-color: if(
@@ -116,7 +116,7 @@ $colors: (
 
   .tint-button.#{$name} {
     background-color: gtkalpha($color, 0.1);
-    color: $color;
+    color: gtkmix($color, $accent_fg_color, 50%);
 
     &:hover {
       background-color: gtkalpha($color, 0.2);
@@ -148,7 +148,7 @@ $colors: (
 
   .textual-button.#{$name} {
     background-color: transparent;
-    color: gtkmix($color, $accent_fg_color, 50%);
+    color: $color;
 
     &:hover {
       background-color: gtkalpha($color, 0.1);
